# src/server/routes/projectRoutes.js
@@ -1,6 +1,6 @@
 import express from 'express';
 import { isAuthenticated, validate } from '../middleware/middleware.js';
-import { projectSchema } from '../../validationSchemas/projectSchema.js';
+import { projectSchema } from '../validationSchemas/projectSchema.js';
 import * as projectController from '../controllers/projectController.js';
 
 const projectRouter = new express.Router();
@@ -8,7 +8,8 @@ const projectRouter = new express.Router();
 projectRouter.use(isAuthenticated);
 projectRouter.post('/createNew', validate(projectSchema.required()), projectController.create);
 projectRouter.get('/getUserProjects', projectController.getAllUserProjects);
-projectRouter.delete('/delete', projectController.deleteProject);
-projectRouter.put('/update', projectController.update);
+projectRouter.get('/getById/:id', projectController.getProjectById);
+projectRouter.delete('/delete/:id', projectController.deleteProject);
+projectRouter.put('/update/:id', projectController.update);
 
 export default projectRouter;
